--- a/packages/proto-signing/package.json
+++ b/packages/proto-signing/package.json
@@ -39,7 +39,7 @@
     "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js"
   },
   "dependencies": {
-    "@cosmjs/amino": "0.27.0-rc2",
+    "@cosmjs/amino": "workspace:packages/amino",
     "@cosmjs/crypto": "0.27.0-rc2",
     "@cosmjs/math": "0.27.0-rc2",
     "cosmjs-types": "^0.4.0",
