--- a/packages/stargate/package.json
+++ b/packages/stargate/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@confio/ics23": "^0.6.3",
-    "@cosmjs/amino": "0.27.0-rc2",
+    "@cosmjs/amino": "workspace:packages/amino",
     "@cosmjs/encoding": "0.27.0-rc2",
     "@cosmjs/math": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
