--- a/package.json
+++ b/package.json
@@ -48,7 +48,12 @@
     "@cosmjs/proto-signing": "0.27.0-rc2",
     "@cosmjs/stargate": "workspace:packages/stargate",
     "eslint": "^7.5",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-spec-reporter": "^0.0.33",
+    "karma-typescript": "^5.5.3",
     "prettier": "^2.4.1",
+    "ts-node": "^8",
     "typescript": "~4.4"
   }
 }
