--- a/packages/amino/package.json
+++ b/packages/amino/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@cosmjs/amino",
-  "version": "0.27.0-rc2",
-  "description": "Helpers for Amino based signing which are shared between @cosmjs/launchpad and @cosmjs/stargate.",
+  "name": "@lbm/amino",
+  "version": "0.1.0",
+  "description": "Helpers for Amino based signing which are shared @lbmjs/proto-signing.",
   "contributors": [
-    "Simon Warta <webmaster128@users.noreply.github.com>"
+    "zemyblue<zemyblue@users.noreply.github.com>"
   ],
   "license": "Apache-2.0",
   "main": "build/index.js",
@@ -14,14 +14,6 @@
     "!*.spec.*",
     "!**/testdata/"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cosmos/cosmjs/tree/main/packages/amino"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
-  },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\" \"./*.js\"",
@@ -70,6 +62,8 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-spec-reporter": "^0.0.33",
+    "karma-typescript": "^5.5.3",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "ses": "^0.11.0",
