--- a/packages/stargate/package.json
+++ b/packages/stargate/package.json
@@ -39,13 +39,14 @@
   },
   "dependencies": {
     "@confio/ics23": "^0.6.3",
-    "@cosmjs/amino": "workspace:packages/amino",
+    "@cosmjs/amino": "0.27.0-rc2",
     "@cosmjs/encoding": "0.27.0-rc2",
     "@cosmjs/math": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
     "@cosmjs/stream": "0.27.0-rc2",
     "@cosmjs/tendermint-rpc": "workspace:packages/tendermint-rpc",
     "@cosmjs/utils": "0.27.0-rc2",
+    "@lbmjs/amino": "workspace:packages/amino",
     "cosmjs-types": "^0.4.0",
     "long": "^4.0.0",
     "protobufjs": "~6.10.2",
