--- a/packages/amino/package.json
+++ b/packages/amino/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lbm/amino",
+  "name": "@lbmjs/amino",
   "version": "0.1.0",
   "description": "Helpers for Amino based signing which are shared @lbmjs/proto-signing.",
   "contributors": [
