--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,7 @@
     "!**/testdata/"
   ],
   "dependencies": {
-    "@cosmjs/amino": "workspace:packages/amino",
+    "@cosmjs/amino": "0.27.0-rc2",
     "@cosmjs/cosmwasm-stargate": "workspace:packages/cosmwasm-stargate",
     "@cosmjs/crypto": "0.27.0-rc2",
     "@cosmjs/encoding": "0.27.0-rc2",
