--- a/packages/proto-signing/package.json
+++ b/packages/proto-signing/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@cosmjs/proto-signing",
+  "name": "@lbmjs/proto-signing",
   "version": "0.27.0",
-  "description": "Utilities for protobuf based signing (Cosmos SDK 0.40+)",
+  "description": "Utilities for protobuf based signing (LBM SDK 0.43.1)",
   "contributors": [
-    "Will Clark <willclarktech@users.noreply.github.com>",
-    "Simon Warta <webmaster128@users.noreply.github.com>"
+    "zemyblue<zemyblue@users.noreply.github.com>"
   ],
   "license": "Apache-2.0",
   "main": "build/index.js",
@@ -15,14 +14,6 @@
     "!*.spec.*",
     "!**/testdata/"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cosmos/cosmjs/tree/main/packages/proto-signing"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
-  },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
     "format": "prettier --write --loglevel warn \"./src/**/*.ts\"",
@@ -36,12 +27,13 @@
     "test-chrome": "yarn pack-web && karma start --single-run --browsers ChromeHeadless",
     "test": "yarn build-or-skip && yarn test-node",
     "coverage": "nyc --reporter=text --reporter=lcov yarn test --quiet",
-    "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js"
+    "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js",
+    "karma-test": "karma start"
   },
   "dependencies": {
-    "@cosmjs/amino": "workspace:packages/amino",
     "@cosmjs/crypto": "0.27.0-rc2",
     "@cosmjs/math": "0.27.0-rc2",
+    "@lbmjs/amino": "workspace:packages/amino",
     "cosmjs-types": "^0.4.0",
     "lbmjs-types": "^0.43.1",
     "long": "^4.0.0",
@@ -76,6 +68,8 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-spec-reporter": "^0.0.33",
+    "karma-typescript": "^5.5.3",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "ses": "^0.11.0",
