--- a/scripts/simapp42/template/.simapp/config/app.toml
+++ b/scripts/simapp42/template/.simapp/config/app.toml
@@ -14,7 +14,7 @@ minimum-gas-prices = ""
 # nothing: all historic states will be saved, nothing will be deleted (i.e. archiving node)
 # everything: all saved states will be deleted, storing only the current state; pruning at 10 block intervals
 # custom: allow pruning options to be manually specified through 'pruning-keep-recent', 'pruning-keep-every', and 'pruning-interval'
-pruning = "default"
+pruning = "nothing"
 
 # These are applied if and only if the pruning strategy is custom.
 pruning-keep-recent = "0"
@@ -53,12 +53,25 @@ min-retain-blocks = 0
 # InterBlockCache enables inter-block caching.
 inter-block-cache = true
 
+# InterBlockCacheSize is the maximum bytes size of the inter-block cache.
+inter-block-cache-size = 104857600
+
+# IAVLCacheSize is the maximum bytes size of iavl node cache
+iavl-cache-size = 104857600
+
+# Bech32CacheSize is the maximum bytes size of bech32 cache (Default : 1GB)
+bech32-cache-size = 1073741824
+
 # IndexEvents defines the set of events in the form {eventType}.{attributeKey},
 # which informs Tendermint what to index. If empty, all events will be indexed.
 #
 # Example:
 # ["message.sender", "message.recipient"]
 index-events = []
+
+# When true, Prometheus metrics are served under /metrics on prometheus_listen_addr in config.toml.
+# It works when tendermint's prometheus option (config.toml) is set to true.
+prometheus = false
 
 ###############################################################################
 ###                         Telemetry Configuration                         ###
@@ -104,7 +117,7 @@ global-labels = [
 enable = true
 
 # Swagger defines if swagger documentation should automatically be registered.
-swagger = false
+swagger = true
 
 # Address defines the API server to listen on.
 address = "tcp://0.0.0.0:1317"
@@ -112,17 +125,20 @@ address = "tcp://0.0.0.0:1317"
 # MaxOpenConnections defines the number of maximum open connections.
 max-open-connections = 1000
 
-# RPCReadTimeout defines the Tendermint RPC read timeout (in seconds).
+# RPCReadTimeout defines the Ostracon RPC read timeout (in seconds).
 rpc-read-timeout = 10
 
-# RPCWriteTimeout defines the Tendermint RPC write timeout (in seconds).
-rpc-write-timeout = 0
+# RPCWriteTimeout defines the Ostracon RPC write timeout (in seconds).
+rpc-write-timeout = 10
 
-# RPCMaxBodyBytes defines the Tendermint maximum response body (in bytes).
+# RPCIdleTimeout defines the Ostracon RPC idle timeout (in seconds).
+rpc-idle-timeout = 60
+
+# RPCMaxBodyBytes defines the Ostracon maximum response body (in bytes).
 rpc-max-body-bytes = 1000000
 
 # EnableUnsafeCORS defines if CORS should be enabled (unsafe - use it at your own risk).
-enabled-unsafe-cors = true
+enabled-unsafe-cors = false
 
 ###############################################################################
 ###                           gRPC Configuration                            ###
