--- a/packages/stargate/package.json
+++ b/packages/stargate/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@cosmjs/stargate",
+  "name": "@lbmjs/stargate",
   "version": "0.27.0",
-  "description": "Utilities for Cosmos SDK 0.40",
+  "description": "Utilities for LBM SDK 0.43.1",
   "contributors": [
-    "Simon Warta <webmaster128@users.noreply.github.com>"
+    "Simon Warta <webmaster128@users.noreply.github.com>",
+    "zemyblue <zemyblue@users.noreply.github.com>"
   ],
   "license": "Apache-2.0",
   "main": "build/index.js",
@@ -14,14 +15,6 @@
     "!*.spec.*",
     "!**/testdata/"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cosmos/cosmjs/tree/main/packages/stargate"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
-  },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\" \"./*.js\"",
@@ -47,7 +40,10 @@
     "@cosmjs/tendermint-rpc": "0.27.0-rc2",
     "@cosmjs/utils": "0.27.0-rc2",
     "@lbmjs/amino": "workspace:packages/amino",
+    "@lbmjs/ostracon-rpc": "workspace:packages/ostracon-rpc",
+    "@lbmjs/proto-signing": "workspace:packages/proto-signing",
     "cosmjs-types": "^0.4.0",
+    "lbmjs-types": "^0.43.2",
     "long": "^4.0.0",
     "protobufjs": "~6.10.2",
     "xstream": "^11.14.0"
@@ -80,6 +76,8 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-spec-reporter": "^0.0.33",
+    "karma-typescript": "^5.5.3",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "readonly-date": "^1.0.0",
