--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,7 +48,7 @@
     "@cosmjs/launchpad": "0.27.0-rc2",
     "@cosmjs/math": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
-    "@cosmjs/stargate": "workspace:packages/stargate",
+    "@cosmjs/stargate": "0.27.0-rc2",
     "@cosmjs/tendermint-rpc": "0.27.0-rc2",
     "@cosmjs/utils": "0.27.0-rc2",
     "axios": "^0.21.2",
