--- a/packages/cosmwasm-stargate/package.json
+++ b/packages/cosmwasm-stargate/package.json
@@ -43,7 +43,7 @@
     "@cosmjs/encoding": "0.27.0-rc2",
     "@cosmjs/math": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
-    "@cosmjs/stargate": "workspace:packages/stargate",
+    "@cosmjs/stargate": "0.27.0-rc2",
     "@cosmjs/tendermint-rpc": "0.27.0-rc2",
     "@cosmjs/utils": "0.27.0-rc2",
     "cosmjs-types": "^0.4.0",
