--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
   },
   "devDependencies": {
     "@cosmjs/amino": "0.27.0-rc2",
-    "@cosmjs/cosmwasm-stargate": "workspace:packages/cosmwasm-stargate",
+    "@cosmjs/cosmwasm-stargate": "0.27.0-rc2",
     "@cosmjs/crypto": "0.27.0-rc2",
     "@cosmjs/encoding": "0.27.0-rc2",
     "@cosmjs/launchpad": "0.27.0-rc2",
     "@cosmjs/proto-signing": "0.27.0-rc2",
     "@cosmjs/stargate": "0.27.0-rc2",
     "@lbmjs/amino": "workspace:packages/amino",
+    "@lbmjs/cosmwasm-stargate": "workspace:packages/cosmwasm-stargate",
     "eslint": "^7.5",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
