--- a/packages/amino/package.json
+++ b/packages/amino/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/amino",
-  "version": "0.1.0",
+  "version": "0.1.0-rc1",
   "description": "Helpers for Amino based signing which are shared @lbmjs/proto-signing.",
   "contributors": [
     "zemyblue<zemyblue@users.noreply.github.com>"
@@ -14,6 +14,10 @@
     "!*.spec.*",
     "!**/testdata/"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\" \"./*.js\"",
