--- a/packages/cosmwasm-stargate/package.json
+++ b/packages/cosmwasm-stargate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/cosmwasm-stargate",
-  "version": "0.27.0",
+  "version": "0.1.0-rc1",
   "description": "LBM(CosmWasm) SDK",
   "contributors": [
     "Will Clark <willclarktech@users.noreply.github.com>",
@@ -15,6 +15,10 @@
     "!*.spec.*",
     "!**/testdata/"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
     "format": "prettier --write --loglevel warn \"./src/**/*.ts\"",
