--- a/packages/cosmwasm-stargate/package.json
+++ b/packages/cosmwasm-stargate/package.json
@@ -43,7 +43,7 @@
     "@lbmjs/ostracon-rpc": "workspace:packages/ostracon-rpc",
     "@lbmjs/proto-signing": "workspace:packages/proto-signing",
     "@lbmjs/stargate": "workspace:packages/stargate",
-    "lbmjs-types": "^0.43.2",
+    "lbmjs-types": "^0.44.0-rc0",
     "long": "^4.0.0",
     "pako": "^2.0.2",
     "protobufjs": "~6.10.2"
