--- a/packages/proto-signing/package.json
+++ b/packages/proto-signing/package.json
@@ -39,7 +39,7 @@
     "@cosmjs/math": "0.27.1",
     "@lbmjs/amino": "workspace:packages/amino",
     "cosmjs-types": "^0.4.0",
-    "lbmjs-types": "^0.43.2",
+    "lbmjs-types": "^0.44.0-rc0",
     "long": "^4.0.0",
     "protobufjs": "~6.10.2"
   },
