--- a/packages/launchpad/package.json
+++ b/packages/launchpad/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@cosmjs/launchpad",
-  "version": "0.27.0",
-  "description": "A client library for the Cosmos SDK 0.37 (cosmoshub-3), 0.38 and 0.39 (Launchpad)",
+  "name": "@lbmjs/launchpad",
+  "version": "0.1.0-rc4",
+  "description": "A client library for the LBM SDK (Rest API using amino)",
   "contributors": [
     "Ethan Frey <ethanfrey@users.noreply.github.com>",
-    "Simon Warta <webmaster128@users.noreply.github.com>"
+    "Simon Warta <webmaster128@users.noreply.github.com>",
+    "zemyblue <zemyblue@users.noreply.github.com>"
   ],
   "license": "Apache-2.0",
   "main": "build/index.js",
@@ -15,10 +16,6 @@
     "!*.spec.*",
     "!**/testdata/"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cosmos/cosmjs/tree/main/packages/launchpad"
-  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
@@ -39,11 +36,11 @@
     "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js"
   },
   "dependencies": {
-    "@cosmjs/amino": "0.27.1",
     "@cosmjs/crypto": "0.27.1",
     "@cosmjs/encoding": "0.27.1",
     "@cosmjs/math": "0.27.1",
     "@cosmjs/utils": "0.27.1",
+    "@lbmjs/amino": "workspace:packages/amino",
     "axios": "^0.21.2",
     "fast-deep-equal": "^3.1.3"
   },
