--- a/packages/ledger-amino/package.json
+++ b/packages/ledger-amino/package.json
@@ -46,7 +46,7 @@
     "semver": "^7.3.2"
   },
   "devDependencies": {
-    "@cosmjs/launchpad": "workspace:packages/launchpad",
+    "@cosmjs/launchpad": "0.27.1",
     "@cosmjs/stargate": "0.27.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@ledgerhq/hw-transport": "^5.25.0",
