--- a/packages/faucet/package.json
+++ b/packages/faucet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/faucet",
-  "version": "0.27.1",
+  "version": "0.1.0-rc4",
   "description": "The faucet",
   "contributors": [
     "Ethan Frey <ethanfrey@users.noreply.github.com>",
