--- a/packages/stargate/package.json
+++ b/packages/stargate/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lbmjs/stargate",
-  "version": "0.1.0-rc4",
-  "description": "Utilities for LBM SDK 0.43.1",
+  "version": "0.1.0-rc5",
+  "description": "Utilities for LBM SDK 0.45.0-rc0",
   "contributors": [
     "Simon Warta <webmaster128@users.noreply.github.com>",
     "zemyblue <zemyblue@users.noreply.github.com>"
