feat: change faucet's token amount type from uint53 to BigNumber to extend the max

--- a/packages/faucet/package.json
+++ b/packages/faucet/package.json
@@ -47,11 +47,13 @@
     "@cosmjs/stargate": "workspace:packages/stargate",
     "@cosmjs/utils": "workspace:packages/utils",
     "@koa/cors": "^3.0.0",
+    "bn.js": "^5.2.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/bn.js": "^5",
     "@types/eslint-plugin-prettier": "^3",
     "@types/jasmine": "^3.8",
     "@types/koa": "^2.11.0",
