chore: version up v0.1.0 and add changelog of lbmjs

--- a/packages/faucet/package.json
+++ b/packages/faucet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/faucet",
-  "version": "0.1.0-rc6",
+  "version": "0.1.0",
   "description": "The faucet",
   "contributors": [
     "Ethan Frey <ethanfrey@users.noreply.github.com>",
