--- a/packages/faucet-client/package.json
+++ b/packages/faucet-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/faucet-client",
-  "version": "0.1.0-rc6",
+  "version": "0.1.0",
   "description": "The faucet client",
   "contributors": [
     "Will Clark <willclarktech@users.noreply.github.com>",
