--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 on:
@@ -8,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Lint
+    name: Test
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
