--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,6 @@
 name: Linter
 
-on:
-  push:
-  pull_request:
+on: [pull_request, push]
 
 jobs:
   run-linters:
@@ -14,9 +12,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '12.x'
+          cache: 'yarn'
 
       - name: Version information
         run: echo "node $(node --version)"; echo "yarn $(yarn --version)"
