--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,11 +14,12 @@ jobs:
           lfs: true
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: 'yarn'
-          cache-dependency-path: yarn.lock
+        uses: nschloe/action-cached-lfs-checkout@v1
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '16'
+#          cache: 'yarn'
+#          cache-dependency-path: yarn.lock
 #      - run: if [ ! -x "$(command -v yarn)" ]; then npm install -g yarn; fi
 
       - name: Version information
