fix: lint action

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,17 +9,17 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v2
-        with:
-          lfs: true
+        uses: nschloe/action-cached-lfs-checkout@v1
+#        uses: actions/checkout@v2
+#        with:
+#          lfs: true
 
       - name: Set up Node.js
-        uses: nschloe/action-cached-lfs-checkout@v1
-#        uses: actions/setup-node@v2
-#        with:
-#          node-version: '16'
-#          cache: 'yarn'
-#          cache-dependency-path: yarn.lock
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
+          cache-dependency-path: yarn.lock
 #      - run: if [ ! -x "$(command -v yarn)" ]; then npm install -g yarn; fi
 
       - name: Version information
