--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: nschloe/action-cached-lfs-checkout@v1
-#        uses: actions/checkout@v2
-#        with:
-#          lfs: true
+#        uses: nschloe/action-cached-lfs-checkout@v1
+        uses: actions/checkout@v3
+        with:
+          lfs: true
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
