--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,5 +29,8 @@ jobs:
         env:
           CI: true
 
+      - name: Build
+        run: yarn build
+
       - name: Lint
         run: yarn lint
