--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  run-linters:
+  tests:
     name: Run linters
     runs-on: self-hosted
 
@@ -28,8 +28,6 @@ jobs:
         run: |
           yarn cache clean --all
           yarn install
-        env:
-          CI: true
 
       - name: Build
         run: yarn build
