--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ coverage/
 !.yarn/sdks
 # We are not using yarn's deferred versioning for now (see https://yarnpkg.com/features/release-workflow)
 # !.yarn/versions
+scripts/simapp_local/test_chain_data
