--- a/packages/amino/package.json
+++ b/packages/amino/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/amino",
-  "version": "0.1.0",
+  "version": "0.4.0-rc0",
   "description": "Helpers for Amino based signing which are shared @lbmjs/proto-signing.",
   "contributors": [
     "Simon Warta <webmaster128@users.noreply.github.com>",
