--- a/packages/cosmwasm-stargate/package.json
+++ b/packages/cosmwasm-stargate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/cosmwasm-stargate",
-  "version": "0.1.0",
+  "version": "0.4.0-rc0",
   "description": "LBM(CosmWasm) SDK",
   "contributors": [
     "Will Clark <willclarktech@users.noreply.github.com>",
