--- a/packages/faucet/package.json
+++ b/packages/faucet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/faucet",
-  "version": "0.1.0",
+  "version": "0.4.0-rc0",
   "description": "The faucet",
   "contributors": [
     "Ethan Frey <ethanfrey@users.noreply.github.com>",
