--- a/packages/proto-signing/package.json
+++ b/packages/proto-signing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/proto-signing",
-  "version": "0.1.0",
+  "version": "0.4.0-rc0",
   "description": "Utilities for protobuf based signing (LBM SDK 0.45.0)",
   "contributors": [
     "zemyblue<zemyblue@users.noreply.github.com>"
