ci: add docker running in test action.
Signed-off-by: zemyblue <zemyblue@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Start simapp docker
         run: |
+          docker ps
           ./scripts/simapp/stop.sh
           ./scripts/simapp/start.sh
 
