--- a/packages/amino/package.json
+++ b/packages/amino/package.json
@@ -40,8 +40,7 @@
     "@cosmjs/crypto": "0.28.4",
     "@cosmjs/encoding": "0.28.4",
     "@cosmjs/math": "0.28.4",
-    "@cosmjs/utils": "0.28.4",
-    "lbmjs-types": "0.46.0-rc5"
+    "@cosmjs/utils": "0.28.4"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
