--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: "16"
       - run: if [ ! -x "$(command -v yarn)" ]; then npm install -g yarn; fi
 
       - name: Version information
@@ -39,11 +39,7 @@ jobs:
         run: yarn build
 
       - name: Unit Test Stargate
-        run: |
-        cd ./packages/stargate
-        SIMAPP_ENABLED=true yarn run test
-      
+        run: cd ./packages/stargate && SIMAPP_ENABLED=true yarn run test
+
       - name: Unit Test Cosmwasm-stargate
-        run: |
-        cd ../cosmwasm-stargate
-        WASMD_ENABLED=true yarn run test
+        run: cd ../cosmwasm-stargate && WASMD_ENABLED=true yarn run test
